Refactor Smart Block Placer 重构智能方块放置器 (#4279)
* 1

* 1

* 1

* 1

* 1

* 1

* 12

* 123

* 12

* 1

* 12

* 1

* 123

* 123

* 1234

* 12

* 12

* fix(fakeplayer): fix reuse ServerLevel causes statis world

* fix(fakeplayer): fix no release for ServerLevel in fake players

* fix(smart): fix place order

* fix(smart): fix some bud (a little)

* fix: fix some bugs

* fix(ibi): improve map using