@@ -2,34 +2,50 @@ package dev.dubhe.anvilcraft.client.renderer.blockentity;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
+import com.mojang.datafixers.util.Either;
 import com.mojang.math.Axis;
 import dev.dubhe.anvilcraft.AnvilCraft;
 import dev.dubhe.anvilcraft.block.SmartBlockPlacerBlock;
 import dev.dubhe.anvilcraft.block.entity.SmartBlockPlacerBlockEntity;
 import dev.dubhe.anvilcraft.init.ModSoundEvents;
+import dev.dubhe.anvilcraft.util.BlockPlacementUtil;
 import net.minecraft.client.Minecraft;
+import net.minecraft.client.color.block.BlockColors;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.RenderType;
+import net.minecraft.client.renderer.block.BlockRenderDispatcher;
 import net.minecraft.client.renderer.blockentity.BlockEntityRenderer;
 import net.minecraft.client.renderer.blockentity.BlockEntityRendererProvider;
+import net.minecraft.client.renderer.entity.ItemRenderer;
+import net.minecraft.client.resources.model.BakedModel;
+import net.minecraft.client.resources.model.ModelManager;
 import net.minecraft.client.resources.model.ModelResourceLocation;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.sounds.SoundSource;
+import net.minecraft.util.RandomSource;
+import net.minecraft.world.item.BlockItem;
+import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.level.Level;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
+import net.minecraft.world.level.block.CandleBlock;
+import net.minecraft.world.level.block.HalfTransparentBlock;
 import net.minecraft.world.level.block.HorizontalDirectionalBlock;
+import net.minecraft.world.level.block.RenderShape;
+import net.minecraft.world.level.block.SeaPickleBlock;
+import net.minecraft.world.level.block.StainedGlassPaneBlock;
+import net.minecraft.world.level.block.TurtleEggBlock;
 import net.minecraft.world.level.block.state.BlockState;
-import org.jetbrains.annotations.Nullable;
+import net.minecraft.world.level.block.state.properties.BlockStateProperties;
+import net.neoforged.neoforge.client.RenderTypeHelper;
+import net.neoforged.neoforge.client.model.data.ModelData;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import javax.annotation.Nullable;
 
 public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockPlacerBlockEntity> {
-    // 位置列表缓存
-    private final Map<String, List<BlockPos>> positionCache = new HashMap<>();
-    
     private static final ModelResourceLocation BASE_MODEL = ModelResourceLocation.standalone(
         AnvilCraft.of("block/smart_block_placer_base")
     );
@@ -46,28 +62,35 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         AnvilCraft.of("block/smart_block_placer_claw_open")
     );
 
-    private static final WorkingAnimationScheme WORKING_ANIMATION_SCHEME = new WorkingAnimationScheme();
+    private static final PlacementAnimation PLACEMENT_ANIMATION = new PlacementAnimation();
+    private static final ItemDisplayContext HELD_ITEM_CONTEXT = ItemDisplayContext.THIRD_PERSON_RIGHT_HAND;
 
-    @SuppressWarnings("unused")
+    private final BlockRenderDispatcher blockRenderer;
+    private final ItemRenderer itemRenderer;
+    private final ModelManager modelManager;
+    private final BlockColors blockColors;
+
     public SmartBlockPlacerRenderer(BlockEntityRendererProvider.Context context) {
+        this.blockRenderer = context.getBlockRenderDispatcher();
+        this.itemRenderer = context.getItemRenderer();
+        this.modelManager = Minecraft.getInstance().getModelManager();
+        this.blockColors = Minecraft.getInstance().getBlockColors();
     }
 
     /**
      * 工作动画方案（放置方块时）
      */
-    private static class WorkingAnimationScheme {
+    private static class PlacementAnimation {
         // 机械臂参数（单位：Minecraft方块）
         private static final float UPPER_ARM_LENGTH = 2.5f;  // 大臂长度
         private static final float FOREARM_LENGTH = 2.5f;    // 小臂长度
         private static final float BASE_HEIGHT = 0.0f;       // 底座关节高度（相对于底座模型）
-        private static final int ANIMATION_DURATION_TICKS = 20; // 动画总持续时间：20tick = 1秒
         
         /**
          * 计算机械臂角度
          *
          * @return float[]{baseSwingAngle, upperArmAngle, forearmAngle, clawAngle}
          */
-        @SuppressWarnings("checkstyle:VariableDeclarationUsageDistance")
         public float[] calculateArmAngles(
             BlockPos targetPos,
             BlockPos placerPos,
@@ -125,13 +148,7 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         
             return new float[]{baseAngle, upperArmAngle, forearmAngle, clawAngle};
         }
-        
-        @SuppressWarnings(
-            {
-            "checkstyle:OneStatementPerLine",
-            "checkstyle:LineLength"
-            }
-        )
+
         private float[] calculateTargetAngles(
             BlockPos targetPos,
             BlockPos placerPos,
@@ -169,13 +186,14 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
 
                 float cosForearm = (UPPER_ARM_LENGTH * UPPER_ARM_LENGTH + FOREARM_LENGTH * FOREARM_LENGTH - clampedDist * clampedDist)
                     / (2 * UPPER_ARM_LENGTH * FOREARM_LENGTH);
-                cosForearm = Math.max(-1.0f, Math.min(1.0f, cosForearm));
+                cosForearm = Math.clamp(cosForearm, -1.0f, 1.0f);
                 float forearmAngleFromUpper = (float) Math.toDegrees(Math.acos(cosForearm));
 
                 float cosUpperArm = (clampedDist * clampedDist + UPPER_ARM_LENGTH * UPPER_ARM_LENGTH - FOREARM_LENGTH * FOREARM_LENGTH)
                     / (2 * clampedDist * UPPER_ARM_LENGTH);
-                cosUpperArm = Math.max(-1.0f, Math.min(1.0f, cosUpperArm));
-                float upperArmAngleFromTarget = (float) Math.toDegrees(Math.acos(cosUpperArm));                upperArmAngle = -(180f - upperArmAngleFromTarget - elevationAngle) * 0.6f + 20f;
+                cosUpperArm = Math.clamp(cosUpperArm, -1.0f, 1.0f);
+                float upperArmAngleFromTarget = (float) Math.toDegrees(Math.acos(cosUpperArm));
+                upperArmAngle = -(180f - upperArmAngleFromTarget - elevationAngle) * 0.6f + 20f;
                 forearmAngle = forearmAngleFromUpper * 0.8f - 10f;
             }
 
@@ -206,20 +224,18 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             return new float[]{baseAngle, upperArmAngle, forearmAngle, clawAngle};
         }
 
-        /**
-         * 获取动画持续时间
-         */
-        public int getAnimationDurationTicks() {
-            return ANIMATION_DURATION_TICKS;
-        }
     }
 
-    @SuppressWarnings(
-        {
-            "checkstyle:VariableDeclarationUsageDistance",
-            "checkstyle:Indentation"
-        }
-    )
+    private record ArmRenderState(
+        float baseSwingAngle,
+        float upperArmAngle,
+        float forearmAngle,
+        float clawAngle,
+        float animationProgress,
+        boolean animationPlaying
+    ) {
+    }
+
     @Override
     public void render(
         SmartBlockPlacerBlockEntity entity,
@@ -232,8 +248,9 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         BlockState state = entity.getBlockState();
         if (!(state.getBlock() instanceof SmartBlockPlacerBlock)) return;
         
-        Direction facing = state.getValue(HorizontalDirectionalBlock.FACING);
-        boolean upsideDown = state.getValue(SmartBlockPlacerBlock.UPSIDE_DOWN);
+        final Direction facing = state.getValue(HorizontalDirectionalBlock.FACING);
+        final boolean upsideDown = state.getValue(SmartBlockPlacerBlock.UPSIDE_DOWN);
+        final @Nullable Level level = entity.getLevel();
         
         // 应用变换
         poseStack.pushPose();
@@ -244,11 +261,6 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         applyHorizontalRotation(poseStack, facing, upsideDown);
         poseStack.translate(0, upsideDown ? 0.5 : -1.5, 0);
 
-        boolean isCurrentlyPowered = entity.isPowered();
-        boolean hasRedstoneSignal = entity.isHasRedstoneSignal();
-        
-        entity.updateClientAnimationState(isCurrentlyPowered, hasRedstoneSignal);
-        
         // 初始化动画变量
         float baseSwingAngle = 0f;
         float upperArmAngle = 0f;
@@ -257,149 +269,16 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         float animationProgress = 0f;
         boolean isAnimationPlaying = false;
         
-        boolean isWorking = entity.getPlaceCooldown() > 0;
-        
-        // 检测是否需要开始收回动画
-        boolean wasWorkingLastFrame = entity.getClientAnimationStartTime() != 0;
-        boolean shouldStartRetract = wasWorkingLastFrame && !isWorking && !entity.isClientIsRetracting();
-        net.minecraft.world.level.Level retractLevel = entity.getLevel();
-        if (shouldStartRetract && retractLevel != null) {
-            long animStartTime = entity.getClientAnimationStartTime();
-            BlockPos animTargetPos = entity.getClientLastTargetPos();
-            
-            if (animStartTime != 0 && animTargetPos != null) {
-                if (!entity.isRetractSoundPlayed()) {
-                    retractLevel.playLocalSound(
-                        entity.getBlockPos(),
-                        ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
-                        SoundSource.BLOCKS,
-                        0.4f,
-                        1.3f,
-                        false
-                    );
-                }
-                entity.setClientIsRetracting(true);
-                entity.setClientRetractStartTime(retractLevel.getGameTime());
-                
-                long elapsedTicks = retractLevel.getGameTime() - animStartTime;
-                float interruptProgress = Math.min(1.0f, (elapsedTicks + partialTick) / (float) WORKING_ANIMATION_SCHEME
-                    .getAnimationDurationTicks());
-                float[] angles = WORKING_ANIMATION_SCHEME.calculateArmAngles(
-                    animTargetPos, entity.getBlockPos(), facing, upsideDown, interruptProgress
-                );
-                entity.setClientRetractStartAngles(angles);
-                entity.setClientRetractStartProgress(interruptProgress);
-            }
-        }
-        
-        // 重新开始工作时取消收回状态
-        if (isCurrentlyPowered && !hasRedstoneSignal && isWorking) {
-            entity.setClientIsRetracting(false);
-        }
-        
-        net.minecraft.world.level.Level retractAnimLevel = entity.getLevel();
-        if (entity.isClientIsRetracting() && retractAnimLevel != null) {
-            long currentTime = retractAnimLevel.getGameTime();
-            long elapsedRetractTicks = currentTime - entity.getClientRetractStartTime();
-            
-            float startProgress = entity.getClientRetractStartProgress();
-            float remainingProgress = 1.0f - startProgress;
-            float retractDuration = WORKING_ANIMATION_SCHEME.getAnimationDurationTicks() * remainingProgress;
-            
-            if (retractDuration <= 0) {
-                entity.setClientIsRetracting(false);
-                entity.setClientAnimationStartTime(0);
-                entity.setClientLastTargetPos(null);
-            } else {
-                float retractProgress = Math.min(
-                    1.0f,
-                    (elapsedRetractTicks + partialTick) / retractDuration
-                );
-                
-                float[] startAngles = entity.getClientRetractStartAngles();
-                baseSwingAngle = startAngles[0] * (1f - retractProgress);
-                upperArmAngle = startAngles[1] * (1f - retractProgress);
-                forearmAngle = startAngles[2] * (1f - retractProgress);
-                clawAngle = startAngles[3] * (1f - retractProgress);
-                
-                if (retractProgress >= 1.0f) {
-                    entity.setClientIsRetracting(false);
-                    entity.setClientAnimationStartTime(0);
-                    entity.setClientLastTargetPos(null);
-                }
-            }
-        } else if (isCurrentlyPowered && !hasRedstoneSignal && isWorking && retractAnimLevel != null) {
-            long currentTime = retractAnimLevel.getGameTime();
-            long animStartTime = entity.getClientAnimationStartTime();
-            BlockPos animTargetPos = entity.getClientLastTargetPos();
-            
-            boolean hasValidWorkItem = !entity.getCurrentHeldBlock().isEmpty() || animStartTime != 0;
-            
-            // 如果动画已播放完成，检查工作条件
-            if (animStartTime != 0 && animTargetPos != null) {
-                long elapsedTicks = currentTime - animStartTime;
-                boolean animationCompleted = elapsedTicks >= WORKING_ANIMATION_SCHEME.getAnimationDurationTicks() + 5;
-                
-                if (animationCompleted) {
-                    BlockPos targetPos = getNextTargetPosition(entity, facing, upsideDown);
-                    if (targetPos == null || targetPos.equals(animTargetPos)) {
-                        if (!entity.isClientIsRetracting()) {
-                            if (!entity.isRetractSoundPlayed()) {
-                                entity.getLevel().playLocalSound(
-                                    entity.getBlockPos(),
-                                    ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
-                                    SoundSource.BLOCKS,
-                                    0.4f,
-                                    1.3f,
-                                    false
-                                );
-                            }
-                            entity.setClientIsRetracting(true);
-                            entity.setClientRetractStartTime(currentTime);
-                            
-                            float[] endAngles = WORKING_ANIMATION_SCHEME.calculateArmAngles(
-                                animTargetPos, entity.getBlockPos(), facing, upsideDown, 1.0f
-                            );
-                            entity.setClientRetractStartAngles(endAngles);
-                            entity.setClientRetractStartProgress(1.0f);
-                            
-                            entity.setClientAnimationStartTime(0);
-                            entity.setClientLastTargetPos(null);
-                        }
-                    } else {
-                        if (entity.getLevel() != null) {
-                            entity.getLevel().playLocalSound(
-                                entity.getBlockPos(),
-                                ModSoundEvents.SMART_BLOCK_PLACER_EXTEND.get(),
-                                SoundSource.BLOCKS,
-                                0.4f,
-                                1.3f,
-                                false
-                            );
-                            if (entity.getLevel().random.nextFloat() < 0.6f) {
-                                entity.getLevel().playLocalSound(
-                                    entity.getBlockPos(),
-                                    ModSoundEvents.SMART_BLOCK_PLACER_SHULKER_OPEN.get(),
-                                    SoundSource.BLOCKS,
-                                    0.4f,
-                                    1.5f,
-                                    false
-                                );
-                            }
-                        }
-                        entity.setClientAnimationStartTime(currentTime);
-                        entity.setClientLastTargetPos(targetPos);
-                        entity.setRetractSoundPlayed(false);
-                        animStartTime = currentTime;
-                        animTargetPos = targetPos;
-                    }
-                }
-            }
-            
-            if (animStartTime == 0 && hasValidWorkItem) {
-                BlockPos targetPos = getNextTargetPosition(entity, facing, upsideDown);
-                if (targetPos != null && entity.getLevel() != null) {
-                    entity.getLevel().playLocalSound(
+        boolean animationActive = entity.isAnimationActive();
+        BlockPos animationTargetPos = entity.getClientAnimationTargetPos();
+        if (!animationActive || level == null) {
+            entity.setClientAnimationTargetPos(null);
+            entity.setClientRetractSoundPlayed(false);
+        } else {
+            if (animationTargetPos == null) {
+                animationTargetPos = getNextTargetPosition(entity, level, facing, upsideDown);
+                if (animationTargetPos != null) {
+                    level.playLocalSound(
                         entity.getBlockPos(),
                         ModSoundEvents.SMART_BLOCK_PLACER_EXTEND.get(),
                         SoundSource.BLOCKS,
@@ -407,8 +286,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                         1.3f,
                         false
                     );
-                    if (entity.getLevel().random.nextFloat() < 0.6f) {
-                        entity.getLevel().playLocalSound(
+                    if (level.random.nextFloat() < 0.6f) {
+                        level.playLocalSound(
                             entity.getBlockPos(),
                             ModSoundEvents.SMART_BLOCK_PLACER_SHULKER_OPEN.get(),
                             SoundSource.BLOCKS,
@@ -417,31 +296,14 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                             false
                         );
                     }
-                    entity.setClientAnimationStartTime(currentTime);
-                    entity.setClientLastTargetPos(targetPos);
-                    entity.setRetractSoundPlayed(false);
-                    animStartTime = currentTime;
-                    animTargetPos = targetPos;
+                    entity.setClientAnimationTargetPos(animationTargetPos);
                 }
             }
-            
-            // 播放动画
-            if (animStartTime != 0 && animTargetPos != null) {
+            if (animationTargetPos != null) {
                 isAnimationPlaying = true;
-                long elapsedTicks = currentTime - animStartTime;
-
-                if (elapsedTicks < WORKING_ANIMATION_SCHEME.getAnimationDurationTicks()) {
-                    animationProgress = Math.min(
-                        1.0f,
-                        (elapsedTicks + partialTick) / (float) WORKING_ANIMATION_SCHEME.getAnimationDurationTicks()
-                    );
-                } else {
-                    animationProgress = 1.0f;
-                }
-
-                // 进入阶段4（收回阶段）时播放收回音效
-                if (!entity.isRetractSoundPlayed() && animationProgress >= 0.7f && entity.getLevel() != null) {
-                    entity.getLevel().playLocalSound(
+                animationProgress = entity.getAnimationProgress(partialTick);
+                if (!entity.isClientRetractSoundPlayed() && animationProgress >= 0.7f) {
+                    level.playLocalSound(
                         entity.getBlockPos(),
                         ModSoundEvents.SMART_BLOCK_PLACER_RETRACT.get(),
                         SoundSource.BLOCKS,
@@ -449,11 +311,10 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
                         1.3f,
                         false
                     );
-                    entity.setRetractSoundPlayed(true);
+                    entity.setClientRetractSoundPlayed(true);
                 }
-
-                float[] angles = WORKING_ANIMATION_SCHEME.calculateArmAngles(
-                    animTargetPos, entity.getBlockPos(), facing, upsideDown, animationProgress
+                float[] angles = PLACEMENT_ANIMATION.calculateArmAngles(
+                    animationTargetPos, entity.getBlockPos(), facing, upsideDown, animationProgress
                 );
                 baseSwingAngle = angles[0];
                 upperArmAngle = angles[1];
@@ -462,48 +323,63 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             }
         }
         
-        // 渲染底座
+        ArmRenderState armState = new ArmRenderState(
+            baseSwingAngle,
+            upperArmAngle,
+            forearmAngle,
+            clawAngle,
+            animationProgress,
+            isAnimationPlaying
+        );
+        renderArm(entity, level, poseStack, buffer, packedLight, packedOverlay, upsideDown, armState);
+        poseStack.popPose();
+    }
+
+    private void renderArm(
+        SmartBlockPlacerBlockEntity entity,
+        @Nullable Level level,
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        int packedLight,
+        int packedOverlay,
+        boolean upsideDown,
+        ArmRenderState state
+    ) {
         poseStack.pushPose();
-        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(baseSwingAngle));
+        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(state.baseSwingAngle()));
         poseStack.translate(-0.5, 0.0, -0.5);
         renderModel(poseStack, buffer, BASE_MODEL, packedLight, packedOverlay);
         poseStack.popPose();
-        
-        // 渲染大臂
+
         poseStack.pushPose();
-        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(baseSwingAngle));
+        poseStack.mulPose((upsideDown ? Axis.YN : Axis.YP).rotationDegrees(state.baseSwingAngle()));
         poseStack.translate(0, 0.625, 0);
-        poseStack.mulPose(Axis.XP.rotationDegrees(upperArmAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.upperArmAngle()));
         poseStack.translate(0, -0.625, 0);
         poseStack.translate(-0.5, 0.0, -0.5);
         renderModel(poseStack, buffer, UPPERARM_MODEL, packedLight, packedOverlay);
-        
-        // 渲染小臂和钳子
+
         poseStack.pushPose();
         poseStack.translate(0.6875, 1.0625, 0.9375);
-        poseStack.mulPose(Axis.XP.rotationDegrees(forearmAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.forearmAngle()));
         poseStack.translate(-0.6875, -1.0625, -0.9375);
         renderModel(poseStack, buffer, FOREARM_MODEL, packedLight, packedOverlay);
+
         poseStack.pushPose();
         poseStack.translate(0.5, 1.3125, 0.375);
-        poseStack.mulPose(Axis.XP.rotationDegrees(clawAngle));
+        poseStack.mulPose(Axis.XP.rotationDegrees(state.clawAngle()));
         poseStack.translate(-0.5, -1.3125, -0.375);
-        
-        // 切换钳子模型
-        // 全新逻辑：钳子只在动画的伸出阶段（0-70%）打开，收回阶段（70-100%）闭合
-        boolean shouldClawBeOpen = isAnimationPlaying && animationProgress > 0f && animationProgress <= 0.7f;
 
-        // 正在播放工作动画且处于伸出阶段（0-70%）：钳子打开
-
+        boolean shouldClawBeOpen = state.animationPlaying()
+            && state.animationProgress() > 0f
+            && state.animationProgress() <= 0.7f;
         ModelResourceLocation currentClawModel = shouldClawBeOpen ? CLAW_OPEN_MODEL : CLAW_MODEL;
         renderModel(poseStack, buffer, currentClawModel, packedLight, packedOverlay);
-        
-        // 渲染钳子中的方块
-        if (shouldClawBeOpen && entity.getLevel() != null) {
-            renderHeldBlock(poseStack, buffer, entity, packedLight, packedOverlay);
+
+        if (shouldClawBeOpen && level != null) {
+            renderHeldContent(poseStack, buffer, entity.getCurrentHeldBlock(), level, packedLight, packedOverlay);
         }
-        
-        poseStack.popPose();
+
         poseStack.popPose();
         poseStack.popPose();
         poseStack.popPose();
@@ -522,29 +398,28 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         poseStack.mulPose(Axis.YP.rotationDegrees(rotation));
     }
     
-    private boolean canBeStacked(net.minecraft.world.level.block.state.BlockState state,
-        @Nullable net.minecraft.world.item.BlockItem blockItem) {
-        if (state.is(net.minecraft.world.level.block.Blocks.TURTLE_EGG)) {
-            if (state.getValue(net.minecraft.world.level.block.TurtleEggBlock.EGGS) < 4) {
-                return blockItem == null || state.getBlock() == blockItem.getBlock();
+    private boolean canBeStacked(BlockState state, @Nullable Block heldBlock) {
+        if (state.is(Blocks.TURTLE_EGG)) {
+            if (state.getValue(TurtleEggBlock.EGGS) < 4) {
+                return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.is(net.minecraft.world.level.block.Blocks.SEA_PICKLE)) {
-            if (state.getValue(net.minecraft.world.level.block.SeaPickleBlock.PICKLES) < 4) {
-                return blockItem == null || state.getBlock() == blockItem.getBlock();
+        if (state.is(Blocks.SEA_PICKLE)) {
+            if (state.getValue(SeaPickleBlock.PICKLES) < 4) {
+                return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.getBlock() instanceof net.minecraft.world.level.block.CandleBlock) {
-            if (state.getValue(net.minecraft.world.level.block.CandleBlock.CANDLES) < 4) {
-                return blockItem == null || state.getBlock() == blockItem.getBlock();
+        if (state.getBlock() instanceof CandleBlock) {
+            if (state.getValue(CandleBlock.CANDLES) < 4) {
+                return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
-        if (state.is(net.minecraft.world.level.block.Blocks.PINK_PETALS)) {
-            if (state.getValue(net.minecraft.world.level.block.state.properties.BlockStateProperties.FLOWER_AMOUNT) < 4) {
-                return blockItem == null || state.getBlock() == blockItem.getBlock();
+        if (state.is(Blocks.PINK_PETALS)) {
+            if (state.getValue(BlockStateProperties.FLOWER_AMOUNT) < 4) {
+                return heldBlock == null || state.is(heldBlock);
             }
             return false;
         }
@@ -555,25 +430,24 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
      * 获取下一个放置目标位置
      */
     @Nullable
-    private BlockPos getNextTargetPosition(SmartBlockPlacerBlockEntity entity, Direction facing, boolean upsideDown) {
-        // 蓝图模式：使用结构数据计算目标位置
-        var loadedStructure = entity.getLoadedStructure();
-        if (loadedStructure != null && !loadedStructure.isEmpty()) {
-            // 先旋转结构数据，再计算目标位置
-            var rotatedStructure = SmartBlockPlacerBlockEntity.rotateStructureDataStatic(
-                loadedStructure);
-            if (!rotatedStructure.isEmpty()) {
-                return getBlueprintTargetPosition(entity, facing, upsideDown, rotatedStructure);
-            }
-            return null;
+    private BlockPos getNextTargetPosition(
+        SmartBlockPlacerBlockEntity entity, Level level, Direction facing, boolean upsideDown
+    ) {
+        if (entity.hasBlueprint()) {
+            return entity.getCurrentBlueprintTargetPosition();
         }
         
         // 普通模式：使用 layerPositions
         BlockPos basePos = entity.getBlockPos().relative(facing.getOpposite(), -4);
         
-        Map<Integer, Set<Integer>> layerPositions = entity.getLayerPositions();
+        boolean[] layerPositions = entity.getLayerPositions();
         
-        List<BlockPos> allPositions = buildOrderedPositionsForRenderer(basePos, facing, layerPositions, upsideDown);
+        List<BlockPos> allPositions = SmartBlockPlacerBlockEntity.buildOrderedPositions(
+            basePos,
+            facing,
+            layerPositions,
+            upsideDown
+        );
         
         if (allPositions.isEmpty()) {
             return null;
@@ -588,12 +462,10 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         for (int i = 0; i < allPositions.size(); i++) {
             int index = (currentIndex + i) % allPositions.size();
             BlockPos targetPos = allPositions.get(index);
-            
-            if (entity.getLevel() == null) {
-                return null;
+            if (!BlockPlacementUtil.isTargetUnobstructed(level, targetPos)) {
+                continue;
             }
-            
-            net.minecraft.world.level.block.state.BlockState targetState = entity.getLevel().getBlockState(targetPos);
+            BlockState targetState = level.getBlockState(targetPos);
             
             if (targetState.isAir()) {
                 return targetPos;
@@ -604,147 +476,8 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
             }
             
             if (!targetState.isAir()) {
-                net.minecraft.world.item.ItemStack heldItem = entity.getCurrentHeldBlock();
-                if (!heldItem.isEmpty() && heldItem.getItem() instanceof net.minecraft.world.item.BlockItem heldBlockItem) {
-                    if (canBeStacked(targetState, heldBlockItem)) {
-                        return targetPos;
-                    }
-                } else if (heldItem.isEmpty()) {
-                    if (canBeStacked(targetState, null)) {
-                        return targetPos;
-                    }
-                }
-            }
-        }
-        
-        return null;
-    }
-    
-    /**
-     * 获取蓝图模式的目标位置
-     */
-    @Nullable
-    private BlockPos getBlueprintTargetPosition(SmartBlockPlacerBlockEntity entity, Direction facing, boolean upsideDown, 
-        dev.dubhe.anvilcraft.util.StructureLoadUtil.StructureData structure) {
-        
-        // 直接使用 BlockEntity 提供的方法获取当前目标位置
-        // 这个方法会正确处理 currentPlacementIndex 到实际索引的转换
-        BlockPos currentTarget = entity.getCurrentBlueprintTargetPosition();
-        
-        if (currentTarget == null) {
-            return null;
-        }
-        
-        // 获取当前钳子中的方块类型
-        net.minecraft.world.item.ItemStack heldItem = entity.getCurrentHeldBlock();
-        net.minecraft.world.level.block.Block heldBlock = null;
-        if (!heldItem.isEmpty() && heldItem.getItem() instanceof net.minecraft.world.item.BlockItem heldBlockItem) {
-            heldBlock = heldBlockItem.getBlock();
-        }
-        
-        // 如果有 heldBlock，检查当前位置是否匹配
-        if (heldBlock != null) {
-            if (entity.getLevel() == null) {
-                return null;
-            }
-            
-            net.minecraft.world.level.block.state.BlockState targetState = entity.getLevel().getBlockState(currentTarget);
-            
-            // 检查位置是否可以放置
-            boolean canPlace = false;
-            if (targetState.isAir()) {
-                canPlace = true;
-            } else if (!targetState.getFluidState().isEmpty()) {
-                canPlace = true;
-            } else if (canBeStacked(
-                                targetState, heldItem.getItem()
-                                                 instanceof net.minecraft.world.item.BlockItem
-                                             ? (net.minecraft.world.item.BlockItem) heldItem.getItem() : null)) {
-                canPlace = true;
-            } else if (canBeStacked(targetState, null)) {
-                canPlace = true;
-            }
-            
-            if (canPlace) {
-                // 检查这个位置在蓝图中需要的方块是否与 heldBlock 匹配
-                int currentIndex = entity.getCurrentPlacementIndex();
-                // 使用传入的 structure 参数（已经是旋转后的数据）
-                List<Integer> orderedIndices = SmartBlockPlacerBlockEntity.buildOrderedBlueprintIndices(structure, upsideDown);
-                
-                if (currentIndex < orderedIndices.size()) {
-                    int actualIndex = orderedIndices.get(currentIndex);
-                    if (actualIndex < structure.blocks.size()) {
-                        net.minecraft.world.level.block.Block requiredBlock = structure.blocks.get(actualIndex).state().getBlock();
-                        if (requiredBlock == heldBlock) {
-                            return currentTarget;
-                        }
-                    }
-                }
-            }
-            
-            // 当前位置不匹配，查找下一个匹配的位置
-            List<BlockPos> allPositions = SmartBlockPlacerBlockEntity.buildBlueprintPositions(
-                entity.getBlockPos(), facing, upsideDown, structure);
-            List<Integer> orderedIndices = SmartBlockPlacerBlockEntity.buildOrderedBlueprintIndices(structure, upsideDown);
-            
-            int currentOrderIndex = entity.getCurrentPlacementIndex();
-            for (int i = 1; i < orderedIndices.size(); i++) {
-                int orderIndex = (currentOrderIndex + i) % orderedIndices.size();
-                int actualIndex = orderedIndices.get(orderIndex);
-                BlockPos targetPos = allPositions.get(actualIndex);
-                
-                if (entity.getLevel() == null) {
-                    return null;
-                }
-                
-                net.minecraft.world.level.block.state.BlockState loopState = entity.getLevel().getBlockState(targetPos);
-                
-                boolean loopCanPlace = loopState.isAir() || !loopState.getFluidState().isEmpty()
-                    || canBeStacked(loopState, heldItem.getItem() instanceof net.minecraft.world.item.BlockItem
-                        ? (net.minecraft.world.item.BlockItem) heldItem.getItem() : null)
-                    || canBeStacked(loopState, null);
-                
-                if (!loopCanPlace) {
-                    continue;
-                }
-                
-                if (actualIndex < structure.blocks.size()) {
-                    net.minecraft.world.level.block.Block requiredBlock = structure.blocks.get(actualIndex).state().getBlock();
-                    if (requiredBlock == heldBlock) {
-                        return targetPos;
-                    }
-                }
-            }
-        } else {
-            // 没有 heldBlock，返回当前目标位置（如果可以放置）
-            if (entity.getLevel() == null) {
-                return null;
-            }
-            
-            net.minecraft.world.level.block.state.BlockState targetState = entity.getLevel().getBlockState(currentTarget);
-            
-            if (targetState.isAir() || !targetState.getFluidState().isEmpty()) {
-                return currentTarget;
-            }
-            
-            // 当前位置不可放置，查找下一个空位
-            List<BlockPos> allPositions = SmartBlockPlacerBlockEntity.buildBlueprintPositions(
-                entity.getBlockPos(), facing, upsideDown, structure);
-            List<Integer> orderedIndices = SmartBlockPlacerBlockEntity.buildOrderedBlueprintIndices(structure, upsideDown);
-            
-            int currentOrderIndex = entity.getCurrentPlacementIndex();
-            for (int i = 1; i < orderedIndices.size(); i++) {
-                int orderIndex = (currentOrderIndex + i) % orderedIndices.size();
-                int actualIndex = orderedIndices.get(orderIndex);
-                BlockPos targetPos = allPositions.get(actualIndex);
-                
-                if (entity.getLevel() == null) {
-                    return null;
-                }
-                
-                net.minecraft.world.level.block.state.BlockState state = entity.getLevel().getBlockState(targetPos);
-                
-                if (state.isAir() || !state.getFluidState().isEmpty()) {
+                Block heldBlock = getDisplayedBlock(entity.getCurrentHeldBlock());
+                if (canBeStacked(targetState, heldBlock)) {
                     return targetPos;
                 }
             }
@@ -753,34 +486,15 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         return null;
     }
     
-    /**
-     * 构建有序的放置位置列表
-     */
-    private List<BlockPos> buildOrderedPositionsForRenderer(
-        BlockPos basePos, Direction facing, Map<Integer, Set<Integer>> layerPositions, boolean upsideDown) {
-        String cacheKey = basePos.toShortString() + "_" + facing.getName() + "_" + upsideDown + "_" + layerPositions.hashCode();
-        
-        if (this.positionCache.containsKey(cacheKey)) {
-            return this.positionCache.get(cacheKey);
-        }
-        
-        List<BlockPos> positions = SmartBlockPlacerBlockEntity.buildOrderedPositions(basePos, facing, layerPositions, upsideDown);
-        
-        this.positionCache.put(cacheKey, positions);
-        
-        return positions;
-    }
-    
-
-    @SuppressWarnings({"checkstyle:EmptyLineSeparator", "deprecation"})
+    @SuppressWarnings("deprecation")
     private void renderModel(
         PoseStack poseStack, MultiBufferSource buffer, ModelResourceLocation model, int packedLight, int packedOverlay) {
         final VertexConsumer vertexConsumer = buffer.getBuffer(RenderType.cutout());
-        Minecraft.getInstance().getBlockRenderer().getModelRenderer().renderModel(
+        this.blockRenderer.getModelRenderer().renderModel(
             poseStack.last(),
             vertexConsumer,
             null,
-            Minecraft.getInstance().getModelManager().getModel(model),
+            this.modelManager.getModel(model),
             0,
             0,
             0,
@@ -789,11 +503,15 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         );
     }
     
-    private void renderHeldBlock(
-        PoseStack poseStack, MultiBufferSource buffer, SmartBlockPlacerBlockEntity entity, int packedLight, int packedOverlay) {
-        ItemStack stack = entity.getCurrentHeldBlock();
-        
-        if (stack.isEmpty()) {
+    private void renderHeldContent(
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        @Nullable Either<ItemStack, BlockState> heldBlock,
+        Level level,
+        int packedLight,
+        int packedOverlay
+    ) {
+        if (heldBlock == null) {
             return;
         }
         
@@ -802,18 +520,88 @@ public class SmartBlockPlacerRenderer implements BlockEntityRenderer<SmartBlockP
         poseStack.mulPose(Axis.XP.rotationDegrees(-40));
         poseStack.scale(0.65f, 0.65f, 0.65f);
         
-        net.minecraft.client.renderer.entity.ItemRenderer itemRenderer = Minecraft.getInstance().getItemRenderer();
-        itemRenderer.renderStatic(
+        heldBlock
+            .ifLeft(stack -> this.renderHeldItem(stack, poseStack, buffer, level, packedLight, packedOverlay))
+            .ifRight(state -> this.renderHeldBlockState(state, poseStack, buffer, packedLight, packedOverlay));
+        
+        poseStack.popPose();
+    }
+
+    private void renderHeldItem(
+        ItemStack stack,
+        PoseStack poseStack,
+        MultiBufferSource buffer,
+        Level level,
+        int packedLight,
+        int packedOverlay
+    ) {
+        this.itemRenderer.renderStatic(
             stack,
-            net.minecraft.world.item.ItemDisplayContext.THIRD_PERSON_RIGHT_HAND,
+            HELD_ITEM_CONTEXT,
             packedLight,
             packedOverlay,
             poseStack,
             buffer,
-            entity.getLevel(),
+            level,
             0
         );
-        
-        poseStack.popPose();
+    }
+
+    private void renderHeldBlockState(
+        BlockState state, PoseStack poseStack, MultiBufferSource buffer, int packedLight, int packedOverlay
+    ) {
+        BakedModel model = this.blockRenderer.getBlockModel(state)
+            .applyTransform(HELD_ITEM_CONTEXT, poseStack, false);
+        poseStack.translate(-0.5F, -0.5F, -0.5F);
+
+        if (state.getRenderShape() != RenderShape.MODEL) {
+            this.blockRenderer.renderSingleBlock(
+                state,
+                poseStack,
+                buffer,
+                packedLight,
+                packedOverlay,
+                ModelData.EMPTY,
+                RenderType.cutout()
+            );
+            return;
+        }
+
+        int color = this.blockColors.getColor(state, null, null, 0);
+        float red = (float) (color >> 16 & 0xFF) / 255.0F;
+        float green = (float) (color >> 8 & 0xFF) / 255.0F;
+        float blue = (float) (color & 0xFF) / 255.0F;
+        ModelData modelData = ModelData.EMPTY;
+        boolean cull = !(state.getBlock() instanceof HalfTransparentBlock)
+            && !(state.getBlock() instanceof StainedGlassPaneBlock);
+
+        for (RenderType blockRenderType : model.getRenderTypes(state, RandomSource.create(42L), modelData)) {
+            VertexConsumer vertexConsumer = buffer.getBuffer(
+                RenderTypeHelper.getEntityRenderType(blockRenderType, cull)
+            );
+            this.blockRenderer.getModelRenderer().renderModel(
+                poseStack.last(),
+                vertexConsumer,
+                state,
+                model,
+                red,
+                green,
+                blue,
+                packedLight,
+                packedOverlay,
+                modelData,
+                blockRenderType
+            );
+        }
+    }
+
+    private static @Nullable Block getDisplayedBlock(@Nullable Either<ItemStack, BlockState> displayedBlock) {
+        if (displayedBlock == null) {
+            return null;
+        }
+        return displayedBlock.map(
+            stack -> stack.getItem() instanceof BlockItem blockItem ? blockItem.getBlock() : null,
+            BlockState::getBlock
+        );
     }
 }
